src/main/java/org/example/Polymorphism.java
package org.example;

//
//class C {
//    int value;
//    void print() throws CloneNotSupportedException {
//        value=10;
//        System.out.println("Value in D is "+value);
//        super.value=5; //error
//        super.print();//error
//    }
//}

//public class Polymorphism {
//
//
//
//}
